--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "d3-vs": "^0.7.7",
+    "leaflet": "^1.3.4",
+    "leaflet-providers": "^1.4.0",
     "lodash": "^4.17.10",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
